[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/objects/units/ranged_units/RangedProjectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/objects/units/assets/2-grenade-f1-png-image.png" type="Texture" id=2]
[ext_resource path="res://src/objects/units/ranged_units/Grenade.gd" type="Script" id=3]
[ext_resource path="res://src/objects/units/assets/jcx6pxbRi.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 6.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionHitbox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionHitbox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionHitbox:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.729412 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 78.0
height = 46.0

[node name="Grenade" instance=ExtResource( 1 )]
z_index = 5
z_as_relative = false
script = ExtResource( 3 )
curve_height = 9
gravity_strenght = 0.2
rotation_speed = 1.0

[node name="Sprite" parent="." index="0"]
position = Vector2( -1, 0 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -2, 1 )
shape = SubResource( 1 )

[node name="GroundDetector" type="Area2D" parent="." index="3"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector" index="0"]
position = Vector2( -2, 1 )
shape = SubResource( 2 )

[node name="Explode" type="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 4 )
anims/explode = SubResource( 5 )

[node name="ExplosionHitbox" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 0

[node name="Sprite" type="Sprite" parent="ExplosionHitbox" index="0"]
scale = Vector2( 0.12, 0.1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionHitbox" index="1"]
rotation = 1.5708
shape = SubResource( 3 )

[connection signal="body_entered" from="GroundDetector" to="." method="_on_GroundDetector_body_entered"]
[connection signal="animation_finished" from="Explode" to="." method="_on_Explode_animation_finished"]
